# iu9-graphics

./: CMakeLists.txt  Makefile  README.md
lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab4/: main.cpp
lab5(py)/: PolygonCut.py  main.py
lab6/: CMakeLists.txt  main.cpp
lab7/: CMakeLists.txt  main.cpp
lab8/: CMakeLists.txt  main.cpp
